tests/parse_print/random_perturb/set01/change-05/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-05/change-05.essence:1:20:
unexpected finO
expecting dot, end of input, or statement
    language Essence 1.3
                    ^^^^^^^